# solace-ai-connector

./: ... other tests ...  .gitignore  README.md  junit-3.9.xml  junit.xml  junit3.10.xml  lint.json  llm.txt  llms.txt  plan.txt  pyproject.toml  requirements.txt  simplified-app-plan.md  }
.github/workflows/: ci.yml  release.yaml  sync.yml  trigger_whitesource.yaml
docs/: advanced_component_features.md  command_control.md  command_control_topics_schemas.md  configuration.md  custom_components.md  getting_started.md  index.md  instructions.md  overview.md  simplified-app-checklist.md  simplified-app-design.md  simplified-app-implementation-plan.md  simplified-apps.md  tips_and_tricks.md
docs/components/: broker_request_response.md  index.md  langchain_vector_store_embedding_index.md  litellm_chat_model.md  litellm_chat_model_with_history.md  litellm_embeddings.md  mongo_insert.md  web_scraper.md  websearch_bing.md  websearch_duckduckgo.md  websearch_google.md
docs/guides/: RAG.md
docs/implementation_plans/: app_config_validation.md
docs/transforms/: map.md
examples/: anthropic_bedrock.yaml  assembly_inputs.yaml  broker_input_output.yaml  error_handler.yaml  simple_echo_app.py
examples/cli/: broker_to_cli.yaml  cli_to_broker.yaml
examples/llm/: litellm_bedrock_chat.yaml  litellm_chat.yaml  litellm_chat_with_history.yaml  litellm_chat_with_loadbalancing.yaml  litellm_embedding.yaml  mixture_of_agents.yaml  openai_chroma_rag.yaml  openai_component_request_response.yaml  openai_pgvector_ingestion.yaml  openai_request_response_flow.yaml
examples/llm/custom_components/: llm_streaming_custom_component.py
examples/websearch/: bing_web_search.yaml  duckduckgo_web_search.yaml  google_web_search.yaml  web_scraping.yaml
src/solace_ai_connector/: main.py  solace_ai_connector.py  utils_for_test_files.py
src/solace_ai_connector/command_control/: broker_adapter.py  command_control_service.py  connector_entity.py  entity_registry.py  request_router.py  schema_validator.py  tracing.py
src/solace_ai_connector/common/: __init__.py  config_validation.py  imports.py  log.py  message.py  monitoring.py  utils.py
src/solace_ai_connector/components/: __init__.py  component_base.py
src/solace_ai_connector/flow/: app.py  flow.py  request_response_flow_controller.py  subscription_router.py
src/solace_ai_connector/storage/: storage_s3.py
src/solace_ai_connector/test_utils/: utils_for_test_files.py
src/solace_ai_connector/tools/: gen_component_docs.py
src/solace_ai_connector/transforms/: append.py  copy_list_item.py  filter.py  map.py  reduce.py  transform_base.py  transforms.py
src/tools/: gen_component_docs.py
tests/: test_acks.py  test_aggregate.py  test_app.py  test_config_file.py  test_error_flows.py  test_filter.py  test_flows.py  test_invoke.py  test_iterate.py  test_message_get_set_data.py  test_multiple_config_files.py  test_nacks.py  test_request_response_controller.py  test_request_response_flow_controller.py  test_timer_input.py  test_transforms.py  utils_for_test_files.py
tests/command_control/: test_broker_adapter.py  test_command_control_service.py  test_entity_registry.py  test_request_router.py  test_schema_validator.py  test_tracing.py
tests/common/: test_utils.py
tests/components/inputs_outputs/: test_broker_base.py  test_broker_input.py  test_broker_output.py
tests/integration/: README.md  conftest.py  run_tests.py  test_imports.py  test_litellm_chat_flow.py  test_mocks.py  test_openai_chroma_rag_flow.py
tests/unit/: test_app_validation.py  test_simplified_app.py
(+74 files in other folders)
