[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "solace_ai_connector"
version = "0.0.1"
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "Solace AI Connector - make it easy to connect Solace PubSub+ Event Brokers to AI/ML frameworks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.93",
    "langchain_core>=0.2.4",
    "PyYAML>=6.0.1",
    "Requests>=2.32.3",
    "slack_bolt>=1.18.1",
    "solace_pubsubplus>=1.7.0",
]

[project.urls]
homepage = "https://github.com/SolaceLabs/solace-ai-connector"
repository = "https://github.com/SolaceLabs/solace-ai-connector"
documentation = "https://github.com/SolaceLabs/solace-ai-connector/blob/main/docs/index.md"


[project.scripts]
solace-ai-connector = "solace_ai_connector.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/solace_ai_connector"]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.2.2",
  "langchain>=0.2.6",
  "coverage>=7.5.4",
]

[tool.ruff]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401", "E731"]

[[tool.hatch.envs.test.matrix]]
python = ["38", "310", "312"]